objects/sumoapp__Location__c.object
<CustomObject>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__AddressText__c</fullName>
        <label>Address(Text)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__AddressVoice__c</fullName>
        <label>Address(Voice)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area</label>
        <referenceTo>sumoapp__Area__c</referenceTo>
        <relationshipLabel>Area Locations</relationshipLabel>
        <relationshipName>AreaLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Description__c</fullName>
        <label>Location Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>sumoapp__Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>sumoapp__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>You can only schedule appointments into active locations.</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__LocationSchedulingOption__c</fullName>
        <label>Location Scheduling Option</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IN_HOUSE</fullName>
                    <label>Your Location</label>
                </value>
                <value>
                    <fullName>OUR_LOCATION</fullName>
                    <label>Our Location</label>
                </value>
                <value>
                    <fullName>PHONE_INBOUND</fullName>
                    <label>You will call us</label>
                </value>
                <value>
                    <fullName>VID_CONFERENCE</fullName>
                    <label>Video Conference</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__MilesRadius__c</fullName>
        <label>Miles Radius</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>sumoapp__Promotion__c</fullName>
        <label>Promotion</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__State__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sumoapp__Zipcode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SUMO Location</label>
    <listViews>
        <fullName>sumoapp__All</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__Street__c</columns>
        <columns>sumoapp__City__c</columns>
        <columns>sumoapp__State__c</columns>
        <columns>sumoapp__Zipcode__c</columns>
        <columns>sumoapp__Country__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Locations</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SUMO Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>